--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -205,41 +205,39 @@ input[type=submit]{
     background: #4aaaa5;
     border: 0 none;
 }
-@media screen and (max-width: 980px){
+@media screen and (min-width: 980px){
     
     .container {
-        width: auto;
-        padding: 20px;
+        max-width: 980;
     }
 
-    #main-section {
-        width: auto;
-    }
+    
 }
 @media screen and (max-width: 768px){
     .container {
-        width: auto;
-        padding: 10px;
-    }
+        max-width: 700;
+           }
 
     #main-section {
-        width: 100%;
+        text-align: center;
     }
 }
-@media screen and (max-width: 600px){
-    #masthead{
-        width: auto;
-        }
+@media screen and (min-width: 600px){
     .container {
-        width: auto;
+        max-width: 600px;
         padding: 10px;
     }
 
-    #main-section {
-        width: auto;
+    .header,
+    .footer{
+        padding-left: 0;
+        padding-right: 0;
+
     }
-    #thisBox {
-    
-        margin-bottom: 10px;
+    .header {
+        margin-bottom: 2rem;
+    }
+    #main-section {
+        border-bottom: 0;
     }
 }
